--- a/package.json
+++ b/package.json
@@ -18,14 +18,25 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "^5.0.4",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/camera": "^5.0.2",
+    "@capacitor/core": "latest",
+    "@ionic/angular": "^7.0.8",
+    "@ionic/pwa-elements": "^3.1.1",
+    "apollo-angular": "^5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.2",
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
+    "@capacitor/cli": "latest",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
